# py-argus

./: .gitignore  README.md  argus.py  pyproject.toml  requirements.txt
argus/: __init__.py  __main__.py  arg_parser.py  audit.py  cli.py
argus/engines/: ollama_engine.py
argus/strategies/: base.py  nestjs_app.py
engines/: base.py  ollama_engine.py
judex/: __init__.py  __main__.py  arg_parser.py  audit.py  cli.py
judex/engines/: ollama_engine.py
judex/strategies/: nestjs_app.py
strategies/: nestjs_app.py
