[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judex-auditor"
version = "1.0.1"
description = "A local AI-powered codebase audit CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama==0.6.2",
    "pydantic==2.13.4",
    "httpx==0.28.1",
]
[project.urls]
"Homepage" = "https://github.com/minkxx/judex-auditor"

[project.scripts]
judex = "judex.cli:main"

[tool.setuptools]
[tool.setuptools.packages.find]
include = ["judex*"]
